...
    if (shouldPlayHapticFeedback) {
        haptics.performHapticFeedback(HapticFeedbackType.LongPress)
        onHapticFeedbackHandled()
    }
    Box(
        modifier =
            Modifier.size(95.dp).testTag("home_connect_button").clickable(
                interactionSource = remember { MutableInteractionSource() },
                indication = null,
            ) {
                onConnectButtonClick()
            },
    ) {
...
