...
            onLoginClick()
        },
        modifier =
            Modifier
                .fillMaxWidth()
                .navigationBarsPadding()
                .testTag("login_submit_button"),
    )
}

@Composable
fun ErrorText(errorType: AuthError) {
    val message =
...
