...
    <string name="password_requirement">8 or more characters with at least one uppercase and lowercase(ie. \"Hello1234\", \"Solyanka\").</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="failed_network_alert">You appear to be on a highly restrictive network which is blocking Windscribe. Please use the \"Emergency Connect\" feature on the main screen and then try to signup or login again. If you\'re unsuccessful, please contact us.</string>
    <string name="failed_network_title">Restrictive Network Detected</string>
    <string name="fa_required_error">2FA code is required</string>
    <string name="fa_invalid_error">Invalid 2FA code</string>
    <string name="login">Log In</string>
    <string name="two_fa">2FA Code</string>
    <string name="add_two_fa">Add 2FA</string>
    <string name="two_fa_description">If enabled, use an authentication app to generate the code.</string>
    <string name="two_fa_check_app_description">Check your preferred one-time password application for a code.</string>
    <string name="enter_two_fa_code">Enter 2FA Code</string>
    <string name="forgot_password">Forgot Password?</string>
...
