...
    showProgress: Boolean,
    actions: RobertActions,
) {
    val navController = LocalNavController.current
    PreferenceBackground {
        Column(
            modifier = Modifier.testTag("robert_screen").padding(vertical = 16.dp, horizontal = 16.dp).navigationBarsPadding(),
            horizontalAlignment = androidx.compose.ui.Alignment.CenterHorizontally,
        ) {
            PreferencesNavBar(stringResource(R.string.robert)) {
                navController.popBackStack()
            }
            Spacer(modifier = Modifier.height(20.dp))
...
