...
        ) {
            Image(
                painter = painterResource(R.drawable.ic_ham_button),
                contentDescription = null,
                modifier =
                    Modifier
                        .testTag("main_menu_button")
                        .hapticClickable {
                            onMainMenuClick()
                        },
            )
            Spacer(modifier = Modifier.width(12.dp))
            Image(
                painter = painterResource(R.drawable.logo_home),
                contentDescription = null,
                modifier =
                    Modifier
                        .testTag("newsfeed_open")
                        .height(18.dp)
                        .clickable {
                            onNewsfeedClick()
                        },
                contentScale = ContentScale.FillHeight,
            )
...
