...
            if (enabled) {
                Image(
                    painter = painterResource(id = R.drawable.ic_toggle_button_on),
                    contentDescription = null,
                    modifier =
                        Modifier
                            .testTag("toggle_on")
                            .clickable { onSelect(!enabled) },
                )
            } else {
                Image(
                    painter = painterResource(id = R.drawable.ic_toggle_button_off),
                    contentDescription = null,
                    modifier =
                        Modifier
                            .testTag("toggle_off")
                            .clickable { onSelect(!enabled) },
                )
            }
        }
        Spacer(modifier = Modifier.height(13.5.dp))
        if (explainer != null) {
...
