...
            )
            Spacer(modifier = Modifier.weight(1f))

            Box(
                modifier =
                    Modifier
                        .testTag("dropdown_selector")
                        .clickable { expanded.value = !expanded.value },
            ) {
                Row(verticalAlignment = Alignment.CenterVertically) {
                    Text(
                        text = selected?.label ?: "",
                        style = font16,
...
