...
    showReferData: Boolean,
    hapticFeedbackEnabled: Boolean,
    onLogout: () -> Unit,
) {
    val navController = LocalNavController.current
    PreferenceBackground {
        Column(modifier = Modifier.testTag("main_menu_screen").padding(vertical = 16.dp, horizontal = 16.dp)) {
            PreferencesNavBar(stringResource(R.string.preferences)) {
                navController.popBackStack()
            }
            Spacer(modifier = Modifier.height(20.dp))
            MainMenuItem(
                R.string.general,
...
) {
    val hapticFeedback = LocalHapticFeedback.current
    Row(
        Modifier
            .fillMaxWidth()
            .height(44.dp)
            .testTag("logout_button")
            .background(
                color = AppColors.yellow.copy(0.05f),
                shape = RoundedCornerShape(size = 12.dp),
            ).clickable(enabled = !showProgress) {
                if (hapticFeedbackEnabled) {
                    hapticFeedback.performHapticFeedback(HapticFeedbackType.ContextClick)
...
