...
    Button(
        onClick = {
            navController.currentBackStackEntry?.savedStateHandle?.set("isAccountClaim", false)
            navController.navigate(Screen.Login.route)
        },
        Modifier
            .testTag("welcome_login_button")
            .height(48.dp)
            .fillMaxWidth()
            .border(1.dp, AppColors.white.copy(alpha = 0.30f), RoundedCornerShape(24.dp)),
        colors =
            ButtonDefaults.buttonColors(
                containerColor = Color.Transparent,
...
