...

    val filePickerLauncher =
        rememberLauncherForActivityResult(
            contract = ActivityResultContracts.OpenDocument(),
        ) { uri: Uri? -> uri?.let { configViewmodel.loadConfigFile(context, it) } }

    Box(modifier = Modifier.testTag("server_list_config").fillMaxSize()) {
        when (state) {
            is ListState.Loading -> {
                ProgressIndicator()
            }

            is ListState.Error -> {
...
