...
    viewModel: ServerViewModel,
    connectionViewModel: ConnectionViewmodel,
) {
    val state by viewModel.staticListState.collectAsState()
    val activity = LocalActivity.current as AppStartActivity
    val isRefreshing by viewModel.refreshState.collectAsState()
    Box(modifier = Modifier.testTag("server_list_static").fillMaxSize()) {
        when (state) {
            is ListState.Loading -> {
                ProgressIndicator()
            }

            is ListState.Error -> {
...
