...
    homeViewmodel: HomeViewmodel,
    pullToRefreshState: PullToRefreshState = rememberPullToRefreshState(),
) {
    val state by viewModel.favouriteListState.collectAsState()
    val lazyListState = rememberLazyListState()
    HandleScrollHaptic(lazyListState, homeViewmodel)
    Box(modifier = Modifier.testTag("server_list_fav").fillMaxSize()) {
        when (state) {
            is ListState.Loading -> {
                ProgressIndicator()
            }

            is ListState.Error -> {
...
