...
) {
    val state by viewModel.serverListState.collectAsState()
    val expandedStates = remember { mutableStateMapOf<String, Boolean>() }
    val bestLocation by connectionViewModel.bestLocation.collectAsState()
    val isRefreshing by viewModel.refreshState.collectAsState()

    Box(modifier = Modifier.testTag("server_list_all")) {
        Column(
            modifier =
                Modifier
                    .fillMaxSize()
                    .padding(top = 0.dp),
            verticalArrangement = Arrangement.Top,
...
